objects/Bundle_MTM__c.object
<CustomObject>
    <description>Placed zzz in the label for CR-5272.</description>
    <fields>
        <fullName>Bundled_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Placed zzz in the label for CR-5272.</description>
        <label>zzzBundled Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Programs Included (Bundled Opportunity)</relationshipLabel>
        <relationshipName>Programs_Included</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_line__c</fullName>
        <description>Placed zzz in the label for CR-5272.</description>
        <formula>TEXT(Program__r.Business_line__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzBusiness line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Placed zzz in the label for CR-5272.</description>
        <label>zzzEvaluated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Business_Vertical__c</fullName>
        <description>Placed zzz in the label for CR-5272.</description>
        <formula>TEXT(Program__r.New_Business_Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzNew Business Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presented__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Placed zzz in the label for CR-5272.</description>
        <label>zzzPresented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Abbreviation__c</fullName>
        <description>Placed zzz in the label for CR-5272.</description>
        <formula>Program__r.Program_Abbreviation__c</formula>
        <label>zzzProgram Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Acronym__c</fullName>
        <description>Placed zzz in the label for CR-5272.</description>
        <formula>Program__r.Program_Acronym__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzProgram Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Evaluated__c</fullName>
        <description>Placed zzz in the label for CR-5272.</description>
        <formula>IF(Evaluated__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzProgram Evaluated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Formal_Name__c</fullName>
        <description>Placed zzz in the label for CR-5272.</description>
        <formula>Program__r.Program_Formal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzProgram Formal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Presented__c</fullName>
        <description>Placed zzz in the label for CR-5272.</description>
        <formula>IF(Presented__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzProgram Presented</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Placed zzz in the label for CR-5272.</description>
        <label>zzzProgram</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Programs Included</relationshipLabel>
        <relationshipName>Bundle_MTMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>zzzPrograms Included</label>
    <nameField>
        <displayFormat>BP-{0}</displayFormat>
        <label>Bundle MTM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs Included</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>